update css naming for css-structure_taco-truck

--- a/week_02/css-structure/css-structure_taco-truck/css/menu.css
+++ b/week_02/css-structure/css-structure_taco-truck/css/menu.css
@@ -1,4 +1,4 @@
-.menu {
+.food-menu {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -6,7 +6,7 @@
   gap: 1rem;
   margin-right: 1.5rem;
 }
-.menu__meal-card {
+.food-menu__meal-card {
   background-color: var(--card-bg);
   max-width: 400px;
   padding: 0.5rem;
