--- a/week_02/css-structure/css-structure_taco-truck/css/styles.css
+++ b/week_02/css-structure/css-structure_taco-truck/css/styles.css
@@ -10,6 +10,7 @@
 /* ------------------------------------------------------------------------------ */
 /* You don't need to edit the code for the * universal selector and the body.
 /* ------------------------------------------------------------------------------ */
+*,
 *::before,
 *::after {
   box-sizing: border-box;
