solutions for responsive playground

--- a/week_02/css-responsive/css-responsive_playground/css/styles.css
+++ b/week_02/css-responsive/css-responsive_playground/css/styles.css
@@ -95,12 +95,12 @@ h1 {
   width: 100%;
 }
 
-@media (min-width: 600px) {
+@media screen and (min-width: 600px) {
   .box--two {
     width: 200px;
   }
 }
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .box--two {
     width: 400px;
   }
