--- a/week_03/html-forms/html-forms_personal-profile-form/css/styles.css
+++ b/week_03/html-forms/html-forms_personal-profile-form/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 button {
   margin-top: 0.5rem;
-  background-color: rgb(229, 67, 15);
+  background-color: #e5430f;
   color: rgb(255, 255, 255);
   text-decoration: none;
   border-radius: 4px;
